add sportner and changes CV

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="fr-FR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="https://static.vecteezy.com/ti/vecteur-libre/p1/8468014-signe-de-code-rouge-sur-fond-blanc-style-plat-symbole-d-icone-de-code-rouge-pour-votre-site-web-design-logo-app-ui-code-symbol-vectoriel.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site CV Julien Dast created using create-react-app"/>
+    <meta name="description" content="Web site CV Julien Dast"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
